public/css/frontend/style.css
@import url('https://fonts.googleapis.com/css?family=Oswald');

body, footer {
    font-family: 'Roboto', sans-serif;
}
.slick-initialized .slick-slide{
    position: relative;
}
.slick-slide picture,
.apart-image-slider picture{
    width: 100%;
    overflow: hidden;
}
.slick-slide picture img,
.apart-image-slider picture img{
    width: 100%;
    /* height: 100vh; */
}
@media screen and (min-width: 1400px) {
    .rules-header {
        margin-top: 3px;
    }
}

@media screen and (min-width: 1200px) {
    #mobile-logo {
        display: none;
    }
    
    .navbar-side-container {
        min-width: 165px;
    }

    .navbar-side-container-2 {
        min-width: 65px;
        margin-left: 100px;
    }
    
    #mobile-lang-toggler{
        display: none;
    }
    
    .selector-bar {
        bottom: 10vh;
    }
    
    #mobile-phones {
        display: none;
    }

    .feedback-card {
        width: 50vw;
        padding-left: 75px;
        margin-left: 92px !important;
    }

    .feedback-card .card-body p {
        text-align: left; 
        margin-bottom: 0px;
    }

    .profile-image {
        left: -75px;
        top: calc(50% - 75px);
    }

    .feedback-button {
        margin-left: calc(50% - 25vw + 75px/2);
    }

    .width-not-full {
        width: calc(50vw - 75px);
    }

    .margin-left-166px {
        margin-left: 166px !important;
    }
    
    .fullscreen-img h1 {
        font-size: 60px;
    }
    
    .features-icon {
        font-size: 7rem;
    }

    .fake {
        background-color: #F4F4F4; 
        position: relative; 
        height: 200px;
    }

    .fake-right {
        right: -96px;
    }

    .fake-left {
        left: -96px;
    }

    .main-slider-apart {
        height: 100%;
    }

    .slider-class-2 {
        height: 100%;   
    }

    .margin-left-15 {
        margin-left: -11%;
    }

    .huge-404 {
        font-size: 150px !important;
    }
}

@media screen and (max-width: 1199px) {
    #desktop-logo {
        display: none;
    }
    
    .navbar-side-container {
        display: none;
    }

    .navbar-side-container-2 {
        display: none;
    }

    .navbar-side-mobile {
        width: 65px;
    }

    .navbar-side-mobile a {
        color: rgba(0, 0, 0, .5);
    }

    .navbar-side-mobile a:hover {
        color: #4a4a4a;
    }
    
    #mobile-lang-toggler {
        color: #4a4a4a;
    }
    
    #mobile-lang-toggler:hover {
        text-decoration: none;
    }
    
    .selector-bar {
        bottom: 10vh;
    }
    
    #mobile-phones {
        padding: 10px;
    }

    .hotel-card-price-hover {display: block !important;}

    .feedback-card {
        padding-top: 20px;
        margin-top: 140px !important;
    }

    .profile-image {
        left: calc(50% - 75px);
        top: -130px;
    }

    .feedback-button {
        width: 100% !important;
    }
    
    .feedback-button a:nth-of-type(1) {
        float: left !important;
        margin-left: 35px !important;
    }

    .feedback-button a:nth-of-type(2) {
        margin-right: 35px !important;
    }

    .feedback-button p {font-size: 18px !important;}

    .feedback-button p:nth-of-type(1) {
        float: left !important;
        margin-left: 42px !important;
    }

    .feedback-button p:nth-of-type(2) {
        margin-left: 0 !important;
        margin-right: 42px;
    }

    .rest-image {
        width: 100% !important;
        height: 50vh !important;
    }

    .rest-details {
        width: 80vw !important;
        margin-top: -30px !important;
        margin-left: calc(50% - 40vw) !important;
        padding-right: 25px !important;
        padding-bottom: 40px !important;
    }

    .rest-dots {
        width: 80vw;
        right: 10vw !important;
        bottom: 23px !important;
    }
    
    .fullscreen-img h1 {
        font-size: 30px;
        margin-top: -70px;
    }
    
    .text-divider {
        display: none;
    }
    
    .features-icon {
        font-size: 4rem;
    }

    .fake {
        display: none;
    }
    
    .small-card-image, .service-image {
        width: 100%;
        height: calc(100vw/1.7) !important;
    }

    /* .main-slider-apart {
        height: calc(60vh + 52px) !important;
    } */

    .apart-photo-title {
        width: 100vw !important;
        bottom: 0 !important;
        background-color: #eeeeee !important;
        color: black !important;
    }

    .slider-class-2 {
        height: calc(60vh + 52px);   
    }

    .fullscreen-img-2 {
        height: 60vh !important;
    }

    .apart-small-card-buy-hover {
        width: 120px !important;
    }

    #feedback-arrow-left {
        top: 0 !important;
        width: calc(50% - 75px) !important;
        left: 0 !important;
    }

    #feedback-arrow-right {
        top: 0 !important;
        width: calc(50% - 75px) !important;
        right: 0 !important;
    }

    .f-arrow-left div {
        margin-left: calc(80% - 50px) !important;
    }

    .f-arrow-right div {
        margin-right: calc(80% - 50px) !important;
    }

    /* .main-dots-2 {
        bottom: 54px !important;
    } */

    .huge-404 {
        font-size: 150px !important;
    }

    #selector-bar-id h2 {
        display: none;
    }

    .ipad-text-center {text-align: center;}

    /* .apart-image-slider {
        height: calc(100vw/1.8) !important;
    } */
}
/* ... */

